seedboxk8s/applications/whoami2/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-ingress-route
  namespace: whoami
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.${clusterFqdn}`)
      kind: Rule
      services:
        - name: whoami-service
          kind: Service
          port: 80
      middlewares:
        - name: bridgetroll-mw
          namespace: bridgetroll
  tls:
    secretName: younix-dot-us-wildcard-backing-secret
